# back

./: .env  .gitignore  README.md  asgi.py  conftest.py  pyproject.toml  test.sh
.github/workflows/: CI-DB.yml  CI-style.yml  CI-test.yml
app/: __init__.py
app/apis/: ai_study_plan_router.py  community_router.py  google_login.py  start.py
app/apis/ai_router/: ai_study_plan_router.py  ai_summary_router.py
app/apis/ai_study_plan/: ai_study_plan_router.py
app/apis/community/: _state.py  comment_router.py  common_router.py  free_router.py  like_router.py  mypage_router.py  post_router.py  (+4 more)
app/configs/: __init__.py  base_config.py  gemini_connect.py  tortoise_config.py
app/core/: attach_limits.py  constants.py  dev_auth.py  realtime.py  s3.py
app/dtos/: users.py
app/exceptions/: __init__.py  base_exception.py  study_plan_exception.py  summary_exception.py
app/models/: ai.py  ai_study_plan.py  base_model.py  community.py  user.py
app/services/: ai_study_plan_service.py  google_login.py
app/utils/: exceptions.py  post_mapper.py
migrations/models/: 10_20250808112819_update.py  11_20250809144443_add_checks_and_indexes.py  12_20250811212352_update.py  13_20250811223528_update.py  14_20250812114319_update.py  15_20250812165034_update.py  16_20250812234456_fk_restrict_posts_children.py  17_20250813110511_update.py  18_20250813111104_fk_posts_children_cascade.py  19_20250813151930_update.py  20_20250814003316_update.py  21_20250814135612_add_ai_document_summaries.py  22_20250814154901_update.py  23_20250818170707_update.py  24_20250824225127_update.py  5_20250805181326_update.py  6_20250805181523_update.py  9_20250808112243_update.py
(+52 files in other folders)
